[package]
name = "lastlog"
version = "0.2.1"
authors = ["Andrew Scott <imgurbot12@gmail.com>"]
description = "Simple rust crate to read linux lastlog"
repository = "https://github.com/imgurbot12/lastlog"
readme = "README.md"
categories = ["os", "parser-implementations"]
keywords = ["lastlog", "utmp", "linux", "login"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cached = "0.40.0"
