[package]
name = "lastlog"
version = "0.3.0"
authors = ["Andrew Scott <imgurbot12@gmail.com>"]
description = "Simple rust crate to read linux lastlog"
repository = "https://github.com/imgurbot12/lastlog"
readme = "README.md"
categories = ["os", "parser-implementations"]
keywords = ["lastlog", "utmp", "linux", "login"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
libc = ["dep:libc"]
cached = ["dep:cached"]

[dependencies]
cached = { version = "0.40.0", optional = true }
libc = { version = "0.2.139", optional = true }
